# sousukerai_hello_world

./: Cargo.toml  README.md
src/: lib.rs
