[package]
name = "sousukerai_hello_world"
version = "0.1.0"
authors = ["Alex Lai <alexlai@yushei.me>"]
edition = "2018"
description = "A Simple Hello World Crate"
repository = "https://github.com/sousukerai/sousukerai_hello_world"
keywords = ["hello", "world"]
license = "Apache-2.0"

[dependencies]
